# manifold-election-2024

./: .gitignore  Cargo.toml  devenv.nix
.github/workflows/: deploy.yaml
src/: lib.rs  main.rs  sort.js
